Fix text overflow when selecting theme accent colors

--- a/src/renderer/components/ft-select/ft-select.css
+++ b/src/renderer/components/ft-select/ft-select.css
@@ -58,7 +58,9 @@
   /* Use custom arrow */
 .select .select-text {
   appearance: none;
-  -webkit-appearance:none
+  -webkit-appearance:none;
+  text-overflow: ellipsis;
+  padding-right: 1.1rem;
 }
 
 .iconSelect {
